Bug 62797 - UI: Impossible to assign a macro to a drawing or picture
Summary: UI: Impossible to assign a macro to a drawing or picture
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
4.0.0.0.beta1
Hardware: Other All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: BSA target:4.0.4
Keywords: regression
: 63687 64507 (view as bug list)
Depends on:
Blocks:
 
Reported: 2013-03-27 08:23 UTC by pierre-yves samyn
Modified: 2025-05-23 19:49 UTC (History)
7 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description pierre-yves samyn 2013-03-27 08:23:56 UTC
Hello

Steps to reproduce:

1. File> New> Spreadsheet (but same with an existing one)
2. Display the Drawing toolbar (if it is not already)
3. Select the Rectangle tool and draw (but same with another tool)
4. Right-click the object and then "Assign Macro", dialog
opens.

Expected Result: The list "Macros" at the bottom left should
display the tree "My Macros", "Macros Libo", "Untitled 1"

Actual result: the list is empty

List "existing Macros" is empty even when the spreadsheet contains macros.

Note:
- Same to assign a macro to a picture
- "ImageMap" suffers from the same problem (which would have been a workaround for pictures)

Verified (qa-fr) with:

Windows 7:
.Version 4.0.1.2
.Version 4.0.2.1 (Build ID: 7e5467ff8f30d821f4fbf69cb2769163eb64c2c)
.Version 4.1.0.0.alpha0+ (Build ID: 8e658ca263808d3466c62b2acfc82d61901fa57
.4.0.3.0+  (Build ID: 2a2ada8fcfeb18b91599a8fb09f3c2081e66abe)

Vista-32b:
.Version 4.0.2.1 (Build ID: 7e5467ff8f30d821f4fbf69cb2769163eb64c2c)


This still works with:
3.6.2.1
3.6.4.3 portable (long delay before the list fills)
3.6.5.2
3.6.6.1 (long delay before the list fills)

Regards
Pierre-Yves
Operating System: All
Version: 4.0.0.1 rc
Comment 1 Jean-Baptiste Faure 2013-04-07 07:53:23 UTC
Reproducible for me under Ubuntu 12.04 x86-64 with:
LibreOffice 4.0.2.2
Version 4.0.3.0+ (Build ID: 19d9d212615714e1bfbbf2fc83f3c057163bb1d)
Version: 4.1.0.0.alpha0+ Build ID: 07c9bb103823dd9c0dc297d0315907ab94488f9

Best regards. JBF
Comment 2 Rainer Bielefeld Retired 2013-04-18 19:30:44 UTC
*** Bug 63687 has been marked as a duplicate of this bug. ***
Comment 3 Rainer Bielefeld Retired 2013-04-18 20:48:52 UTC
Already [Reproducible] with server  installation of  "LOdev  4.0.0.0.beta1+   -  ENGLISH UI / German Locale  [Build ID: 6d4a55bf38a1c470c49f904dbbddf94eb2f6154)]"  {tinderbox: Win-x86@6, pull time 2012-12-17 08:36:40} on German WIN7 Home Premium (64bit) with own separate User Profile 

Was still OK  with  parallel installation of  "LOdev  4.0.0.0.beta1   -  French UI / German Locale  [Build ID: 87906242e87d3ddb2ba9827818f2d1416d80cc7)]"  {tinderbox: @6, pull time 2012-12-06} on German WIN7 Home Premium (64bit) with separate /4 User Profile for Master Branch
Comment 4 Andras Timar 2013-04-19 10:47:08 UTC
 5d84af7e83404f22d3c9cd0b0bb88fb84d0550e7

This commit caused the problem. The dialog is used not only as a tab page, but also standalone.
Comment 6 Commit Notification 2013-05-05 17:25:44 UTC
Caolan McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-4-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=cfe7f8750ce4b63e48a69557c8aed6d8523f8896&h=libreoffice-4-0

fdo#62797 fix macro assign dialog


It will be available in LibreOffice 4.0.4.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 7 Andras Timar 2013-05-13 07:40:06 UTC
*** Bug 64507 has been marked as a duplicate of this bug. ***
Comment 8 pierre-yves samyn 2013-06-01 10:44:35 UTC
Hello

WORKSFORME, verified with windows 7 64btis &
Version 4.0.4.1 (Build ID: 7fdd5ee61c1c7379dd088f5d50265f0adbccf53)

Thank you
Regards
Pierre-Yves