fdo#62797 fix macro assign dialog

Which was empty of contents e.g. from autotext->macro...

because of 5d84af7e83404f22d3c9cd0b0bb88fb84d0550e7
"fdo#57553: Picture dialog Macro tab page: lazily init"

which was because of bd2c14ec78a7549d4a19738154cdd5ea890f61c4
"we have to have all tabpages in all modes now"

which was because we need to create all tabpages in order to determine their
size for layout.

    Change-Id: I01fe03abf3e4582e87927729286a21d0bac7037c

Change-Id: Ic662f6a927225b56820ccebf135b82ab1631974d
Signed-off-by: Andras Timar <atimar@suse.com>